댓글입력시 제품 리스트를 댓글리스트로 바꿔야함

--- a/src/component/Header/Header.module.css
+++ b/src/component/Header/Header.module.css
@@ -11,10 +11,24 @@
 
     /* font-family: 'PartialSansKR-Regular'; */
     margin: 0;
+    float: left;
     padding: 0;
     line-height: 60px;
     color:white;
     margin-left:20px;
     font-size: 30px !important;
     font-weight: normal;
+    width: 120px;
+}
+.HeaderMenu{
+    font-family: 'Giants-Inline';
+    line-height: 30px;
+    font-size: 17px;
+    float: left;
+    color:white;
+}
+.HeaderMenu li{
+    color:white;
+    text-decoration: none;
+    list-style: none;
 }
