--- a/src/component/OOTD/OOTD.module.css
+++ b/src/component/OOTD/OOTD.module.css
@@ -9,16 +9,19 @@
     .RightBox{
         height: 450px !important;
     }
+    .Snap{
+        margin-left: 10% !important;
+    }
 
 }
 .OOTD{
+    border: 1px solid #000;
     font-family: 'GongGothicMedium';
     float: left;
-    margin-top: 80px;
+    margin-top: 60px;
     width: 60vw;
     margin-left: 20%;
     margin-bottom: 100px;
-    border: 1px solid #000;
 }
 .OOTDHeader{
     width: 100%;
@@ -58,6 +61,7 @@
     position: relative;
 }
 .LeftOOTD img{
+    
     float: left;
     width:90%;
     height: 600px;
@@ -104,7 +108,6 @@
     overflow-y: scroll;
     overflow-x:hidden;
     padding-left: 20px ;
-    border-bottom: 1px solid #000;
     height: 550px;
     float: left;
     width: calc(48% - 15px);
@@ -112,6 +115,7 @@
 }
 
 .RightBox::-webkit-scrollbar{
+    display: none;
   }
   
   
@@ -137,6 +141,7 @@
 .OOTDInfo p{
     margin: 0;
     padding: 0;
+
     float: left;
     margin-left: 10px;
     width: calc(100% - 220px);
@@ -158,26 +163,82 @@
 .Categori{
     margin-top: 20px !important;
     font-size: 14px;
+    width: calc(100% - 220px);
+    float: left;
+    margin-left: 10px;
+
+
 }
 
 .Shopping{
-    width: 100px;
-    height: 120px;
-
+    width: 45px;
+    background-color: white; 
     border: 0px ;
-    
     margin: 0;
     padding: 0;
-    position: relative;
-    background-color: white;
+    position: absolute;
+    right: 5px;
+    height: 120px;
 }
+#Heart{
+    position: relative;
+    bottom: 5px;
+    background-color: white; 
+    border: 0px ;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 50%;
+}
+#Cart{
+    position: relative;
+    bottom: 2px;
+    background-color: white; 
+    border: 0px ;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 50%;
+}
+
+
 .Shopping img {
+    width: 100%;
+    height: 100%;
     object-fit:  contain;
 }
 
 .footMenu{
-    width: 50%;
-    background-color: red;
-    position: absolute;
-    left: 50.5%;
+    width: 40%;
+    float: left;
+    width: calc(48% - 3px);
+
+
+}
+.footMenu button{
+    padding: 0;
+    width: 49%;
+    font-family: 'GongGothicMedium';
+    height: 45px;
+    background-color: white;
+    margin-top: 3px;
+    line-height: 40px;
+    box-sizing: border-box;
+    border: 2px solid #000;
+    border-collapse: collapse;
+}
+.Comment{
+    margin-left: 2%;
+    
+}
+
+
+.Snap{
+    font-family: 'Giants-Inline';
+    font-weight: bold;
+    border: 0px solid #000;
+    position: relative;
+    top: 60px;
+    margin: 0;
+    margin-left: 20%;
 }
