--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,11 @@ body{
   padding: 0;
   width: 100vw;
   height: 100vh;
+  text-decoration: none;
+  text-decoration-line: none;
+
 }
+
 @font-face {
   font-family: 'PartialSansKR-Regular';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/PartialSansKR-Regular.woff2') format('woff2');
@@ -22,4 +26,8 @@ body{
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+}
+
+*{
+  text-decoration: none;
 }
