sanp 슬라이더 추가
트렌드 아이템 브랜드 추가

--- a/src/component/OOTD/OOTD.module.css
+++ b/src/component/OOTD/OOTD.module.css
@@ -389,6 +389,8 @@
     height: 550px;
     float: left;
     width: calc(48% - 15px);
+    border-collapse: collapse;
+
 
 }
 
@@ -398,7 +400,7 @@
   
   
 .OOTDInfo{
-    
+    border-collapse: collapse;
     object-fit: contain;
     position: relative;
     right: 20px;
