--- a/src/component/TrendSetter/Trend.module.css
+++ b/src/component/TrendSetter/Trend.module.css
@@ -35,6 +35,7 @@
     width: 100%;
 }
 .TSbox{
+    position: relative;
     background-color: white;
     width: calc(33.33% - 10px);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -46,10 +47,21 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
   .TSheader{
+    margin: 0;
+    padding: 0;
     position: absolute;
+    top:-2px;
     color:white;
-    margin-left: 5px;
+    float: left;
+    height: 25px;
+    width: 100%;
+    background-color: rgba(0,0,0,0.2);
     margin-top: 2px;
+  }
+  .TSheader p{
+    margin: 0;
+    padding: 0;
+
   }
   .TSbox img{
     width: 100%;
