--- a/src/component/TrendSetter/Trend.module.css
+++ b/src/component/TrendSetter/Trend.module.css
@@ -17,9 +17,52 @@
     }
 
 }
+
+@media screen and (max-width:901px) {
+    .TrendSetter{
+        width: 80% !important;
+        margin-left: 10% !important;
+    }
+    .LeftOOTD img{
+        height: 500px !important;
+    }
+    .RightBox{
+        height: 450px !important;
+    }
+    .Snap{
+        margin-left: 10% !important;
+    }
+    .TSbox{
+        height: 250px !important;
+    }
+    .TSheader{
+        font-size: 13px !important;
+        line-height: 25px !important;
+    }
+
+}
+
 @media screen and (max-width:721px) {
     .TSbox{
         height: 200px !important;
+    }
+}
+@media screen and (max-width:581px) {
+    .TSheader{
+        line-height: 30px !important;
+        font-size: 13px !important;
+    }
+    .TSbox{
+        height: 170px !important;
+    }
+}
+@media screen and (max-width:463px) {
+    .TSheader{
+        line-height: 25px !important;
+        font-size: 10px !important;
+    }
+    .TSbox{
+        height: 140px !important;
     }
 }
 .TrendSetter {
@@ -41,7 +84,7 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin: 5px;
     float: left;
-    height: 400px;
+    height: 500px;
 }
 .TSbox:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -61,9 +104,11 @@
   .TSheader p{
     margin: 0;
     padding: 0;
+    margin-left: 5px;
 
   }
   .TSbox img{
     width: 100%;
     height: 100%;
   }
+  
