--- a/src/component/HotItem/HotItem.module.css
+++ b/src/component/HotItem/HotItem.module.css
@@ -1,4 +1,11 @@
+@media screen and (max-width:1400px) {
+    .HotItemPage{
+        width: 80vw !important;
+        margin-left: 10% !important;
+    }
+}
 .HotItemPage{
+    max-width: 1900px;
     float: left;    
     width: 60vw;
     margin-left: 20%;
