--- a/src/component/AddOOTD/ADD.module.css
+++ b/src/component/AddOOTD/ADD.module.css
@@ -44,7 +44,7 @@
 
     width: 40%;
     border-radius: 15px;
-    height: 5vh;
+    height: 3vh;
 }
 .Logo{
     font-family: 'Giants-Inline';
@@ -107,4 +107,134 @@
     font-family: 'GongGothicMedium';
     width: 45% !important;
     cursor: pointer;
+}
+.ButtonBox{
+    width: 100%;
+    float: left;
+}
+.ButtonBox button {
+    margin-top: 10px;
+    width: calc(33.3%);
+    background-color: gray;
+    color:white;
+    border: 1px solid white;
+    font-family: 'GongGothicMedium';
+
+    height: 30px;
+
+}
+.Show{
+    background-color: palegoldenrod !important;
+    border: 1px solid white;
+    color:black !important;
+
+}
+
+
+/*미리보기*/
+
+.PreviewSection{
+    background-color: white;
+    position: absolute;
+    height: 80vh;
+    width: 100%;
+    
+}
+.PreviewSection h1{
+    color : black;
+    width: 80%;
+    margin-left:2.5%;
+    line-height: 10px;
+    float: left;
+    font-family: 'Giants-Inline';
+
+}
+.Previewheader {
+    background-color: palegoldenrod !important;
+    float: left;width: 100%;
+    height: 50px;
+    color:black;
+}
+.ClosePrev{
+    cursor: pointer;
+    float: right;
+    text-align: right;
+    font-size: 30px;
+    color:red;
+    font-weight: bold;
+    width: 10%;
+    line-height: 50px;
+    margin-right: 8px;
+}
+.PrevItem{  
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 40vh;
+    overflow-y: scroll;
+    border-bottom: 2px solid #000;
+
+}
+.PrevItem::-webkit-scrollbar {
+    display: none; /* WebKit */
+  }
+.PrevItem p{
+    width: 100%;
+    margin: 0;
+    pad: 0;
+    margin-left: 2.5%;
+    float: left;
+    width: auto;
+    font-size: 14px;
+    line-height: 50px;
+    color:black;
+    
+}
+
+.PrevItemBox{
+    border: 2px solid #000;
+    border-radius: 10px;
+    float: left;
+    width: 95%;
+    margin: 2.5%;
+
+    margin-bottom: 0;
+    margin-top: 1.5%;
+}
+.PrevItemBox img{
+    border-radius: 10px;
+    margin-top: 1px;
+    width: 48px;
+    height: 48px;
+    float: left;
+}
+.DeleteItem{
+    float: right;
+    line-height: 50px;
+    cursor: pointer;
+    margin-right: 15px;
+}
+
+.AddItemLogo{
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+    font-family: 'GongGothicMedium' !important; 
+
+    color:black;
+    margin-left: 2.5%;
+
+}
+.PrevInfo{
+    width: 100%;
+}
+.AddItemLogoE{
+    margin: 0;
+    padding: 0;
+    margin-top: 10px;
+    font-family: 'GongGothicMedium' !important; 
+
+    color:black;
+    margin-left: 2.5%;
+
 }
