미리보기 완성 댓글 해야함
트렌드세터 좋아요순 6명

--- a/src/component/AddOOTD/ADD.module.css
+++ b/src/component/AddOOTD/ADD.module.css
@@ -238,3 +238,25 @@
     margin-left: 2.5%;
 
 }
+.OOTDPreviewBox{
+    color:black;
+}
+.OOTDPreviewBox img{
+    
+    color:black;
+    float: left;
+    margin-left: 2.5%;
+    width: 200px;
+    float: left;
+    margin-top: 2%;
+    height: 250px;
+    background-color: antiquewhite;
+}
+.OOTDPreviewBox li{
+    list-style: none;
+}
+.RightInfo{
+    float: left;
+    margin-top: 20px;
+    margin-left: 5%;
+}
