--- a/src/component/OOTD/OOTD.module.css
+++ b/src/component/OOTD/OOTD.module.css
@@ -684,6 +684,8 @@
     box-sizing: border-box;
     border: 2px solid #000;
     border-collapse: collapse;
+    text-decoration: none;
+    color:black;
 }
 .Comment{
     margin-left: 2%;
