코멘트 수정

--- a/src/component/OOTD/OOTD.module.css
+++ b/src/component/OOTD/OOTD.module.css
@@ -731,7 +731,7 @@
 
 .CommentActive{
     background-color: black !important;
-    color:white;
+    color:white !important;
 }
 .Like{
     width: 48.2% !important;
