--- a/src/component/Comment/Comment.module.css
+++ b/src/component/Comment/Comment.module.css
@@ -1,3 +1,23 @@
+@media screen and (max-width:800px) {
+    .CommentInfo{
+        font-size: 11px !important;
+        line-height: 10px !important;
+        color:gray;
+    }
+    .CommentContent{
+        font-size: 12px !important;
+    }
+}
+@media screen and (max-width:400px) {
+    .CommentInfo{
+        font-size: 10px !important;
+        line-height: 10px !important;
+        color:gray;
+    }
+    .CommentContent{
+        font-size: 11px !important;
+    }
+}
 .CommentList li {
     list-style: none;
     padding: 0;
@@ -29,18 +49,21 @@
 
 .CommentBox textarea{
     position: absolute;
-    width: 65%;
+    width: 60%;
     bottom:0;
 }
 .CommentBox button{
     position: absolute;
     right: -5px;
     bottom: 0;
-    width: 30%;
+    width: 40%; 
+    border: 0 solid #000;
+    background-color: #000;
+    color: white !important;
     height: 38px;
-    background-color: yellow;
     font-family: 'GongGothicMedium';
-
+    font-size: 11px;
     color:black;
+    box-sizing: border-box;
 
 }
