--- a/src/component/AddOOTD/ADD.module.css
+++ b/src/component/AddOOTD/ADD.module.css
@@ -109,7 +109,7 @@
     }
 
     .PreviewSection{
-        height: 55vh !important;
+        height: 80vh  !important;
     }
     .PrevItem{
         height: 35% !important;
@@ -120,12 +120,19 @@
         height: 100vh !important;
     }
     .AddOOTD{
-        
-        top:10% !important; 
+        top:2% !important; 
         width: 80% !important;
-        height: 55vh 
+        height: 80vh 
         !important;
         margin-left: 10% !important;
+    }
+    .OOTDInput{
+        margin-top: 6% !important;
+        margin-left: 6% !important;
+    }
+    .ItemInput{
+        margin-left: 6% !important;
+        margin-top: 2% !important;
     }
     .AddOOTD label{
         font-size: 13px !important;
@@ -135,8 +142,8 @@
 
 @media screen and (max-width:420px) {
     .PreviewSection{
-        height: 48vh !important;
-    }
+        height: 75vh 
+        !important;    }
     .PrevItem{
         height: 35% !important;
     }
@@ -157,7 +164,7 @@
     .AddOOTD{
         top:5% !important; 
         width: 80% !important;
-        height: 48vh 
+        height: 75vh 
         !important;
         margin-left: 10% !important;
     }
@@ -180,7 +187,6 @@
 }
 @media screen and (max-width:400px) {
     .PreviewSection{
-        height: 48vh !important;
     }
 }
 
